# PWAO-CSU

./: README.md  run_demo.sh
Arduino/: readme
Arduino/carRotate/: carRotate.ino
Arduino/carstop/: carstop.ino
Arduino/carwd/: carwd.ino
Arduino/demo_car/: demo_car.ino
Arduino/imu_bno055/: imu_bno055.ino
Arduino/imu_test/: imu_test.ino
Arduino/imu_test_24_april/: imu_test_24_april.ino
Arduino/joystick_test/: joystick_test.ino
Arduino/libraries/: readme
Arduino/libraries/PIDController/: FeedbackController.hpp  PIDController.cpp  PIDController.hpp
Arduino/libraries/imu_util/: imu_util.cpp  imu_util.h
Arduino/libraries/lidar_util/: lidar_util.cpp  lidar_util.h
Arduino/lidar_obstacle_avoidance/: lidar_obstacle_avoidance.ino
Arduino/loop_controller/: loop_controller.ino
Arduino/micro_ros_keyboard_test/: micro_ros_keyboard_test.ino
Arduino/scan_subscriber_teensy/: scan_subscriber_teensy.ino
Arduino/test_digpot2/: test_digpot2.ino
Arduino/test_serial_read/: test_serial_read.ino
Arduino/wheelchair_continuous/: wheelchair_continuous.ino
Arduino/wheelchair_demo/: wheelchair_demo.ino
Arduino/wheelchair_test/: wheelchair_test.ino
Arduino/wheelchair_with_lidar_reliable/: wheelchair_with_lidar_reliable.ino
Code/: commands.txt
Code/Lidar_ImageOverlay/include/: Point2Image.hpp  Polar2Cartesian.hpp  Projection2Image.hpp
Code/Lidar_ImageOverlay/src/: Point2Image.cpp  Projection2Image.cpp
Code/feedbackController/: readme.md
Code/feedbackController/src/: FeedbackController.hpp  PIDController.cpp  PIDController.hpp
Code/pythoncode/: lat_msg.py  latency_test.py  rtt.py  rtt_msg.py  sns_boxplot.py  sync.py  test.py  transformation.py
Commands/: sliidar_ros2
Diagrams/: Readme.md  Stakeholder context.drawio  System Context.drawio  algorithmflow.drawio  architectural diagram.drawio
Diagrams/UML/: Error UML.drawio  Interfaces.drawio  Loopcontroller.drawio  UML PID.drawio  UML.drawio  Use Case Diagram  obstacle uml.drawio  req_diagram.drawio
humble_ws/src/cpp_pubsub/: CMakeLists.txt  package.xml
humble_ws/src/error_handler/: CMakeLists.txt  package.xml
humble_ws/src/lidar_visualization/: CMakeLists.txt  package.xml
humble_ws/src/obstacle_detection/: CMakeLists.txt  package.xml
humble_ws/src/obstacle_detection/include/obstacle_detection/: LidarUtility.h
humble_ws/src/obstacle_detection/src/: LidarUtility.cpp  obstacle_detector.cpp
humble_ws/src/sequence_controller/: CMakeLists.txt  package.xml
humble_ws/src/sequence_controller/src/: latency_test.cpp  sequence_controller.cpp  state_controller.cpp  state_controller_v2.cpp
libraries/: readme
microros_ws/: Readme.md  platform.txt
microros_ws/sllidar_ros2/: CMakeLists.txt
microros_ws/user_input/: CMakeLists.txt  package.xml
ros2_ws/: readme.txt
ros2web/: index.html  index_tested.html  test2.html  test3.html  tested_works.html
ros2web/flask-app/: latency_index.html  latency_test.py
rotation_node/: Physicalsetup.drawio  Untitled Diagram.drawio  loop_controller  rotation_node_v1.ino
test_log/: Untitled Document  demo_is.sh  demo_rosbridge.sh  is_test1.sh  is_test2.sh  rtt_message.sh  rtt_rosbridge.sh
test_log/lidar/: details  obstacle_test.sh  test1.txt  test2.txt  test3.txt
test_log/micro/: details  test1.txt  test2.txt  test3.txt
test_log/pid/: details.txt  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
test_log/rosbridge/: RTT_28byte_RE.txt  latency_vary_msg_size.txt  reliable_3_pub_phone.txt  reliable_3_publisher.txt  test1_stress.txt
wheelchair_test/: is_test1_be.yaml  is_test1_re.yaml  is_test2_be.yaml  is_test2_re.yaml
(+42 files in other folders)
